--- a/tcp_rpc/README
+++ b/tcp_rpc/README
@@ -1,6 +1,6 @@
-There are two ways to build this code.  The first is to cd into the ebin directories of each of the apps in the lib directory adn run the following command. 
+There are two ways to build this code.  The first is to cd into each of the application directories in the lib directory and run the following command:
 
-erl -I ../include ../src/*erl
+erlc -o ./ebin -I ./include ./src/*.erl
 
 The second way to build this code is to install the Sinan build system. To install it go to Erlware.org and download the Faxien package management system.  Once installed run 
 
